tool-203 convert to template (wipes institution and organizer correctly too), and snackbar z-index fix

--- a/src/AppBundle/Resources/assets/css/sass/base/_page.scss
+++ b/src/AppBundle/Resources/assets/css/sass/base/_page.scss
@@ -29,6 +29,7 @@ body {
   left:10px;
   padding:0px;
   width: 100%;
+  z-index: 1;
 }
 
 .snackbar {
